@@ -1,3 +1,7 @@
+2005-03-23  Ben Maurer  <bmaurer@ximian.com>
+
+	* TypeGraphViewer.cs: Create a scale for the x axis.
+
 2005-02-12  Ben Maurer  <bmaurer@ximian.com>
 
 	* HeapScroller.cs, ShellPager.cs, Shell.cs: Allow the closing of
